--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,19 +6,32 @@
 parameters:
 
 services:
+        acme_api.event.jwt_created_listener:
+            class: App\EventListener\JWTCreatedListener
+            arguments:
+                - '@logger'
+                - '@App\Repository\UserRepository'
+            tags:
+                - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created, method: onJWTCreated }
+    
+        acme_api.event.logout_listener:
+            class: App\EventListener\LogoutListener
+            tags:
+                - { name: kernel.event_listener, event: Symfony\Component\Security\Http\Event\LogoutEvent, method: onLogout}
+
     # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        _defaults:
+            autowire: true      # Automatically injects dependencies in your services.
+            autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
-        exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
+        App\:
+            resource: '../src/'
+            exclude:
+                - '../src/DependencyInjection/'
+                - '../src/Entity/'
+                - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
